--- a/index.html
+++ b/index.html
@@ -50,10 +50,10 @@
 									111N IST Building <br>
 									<a href="http://www.cse.psu.edu/" target="_blank">Department of Computer Science and Engineering</a><br>
 									<a href="http://www.psu.edu/" target="_blank">Penn State University</a>, University Park, PA, 16802 <br>
+									<a href="mailto:ashutosh@cse.psu.edu" target="_blank"><img width=32 src="images/mail.ico" style="vertical-align:middle"> ashutosh@cse.psu.edu</a><br>
 									<a href="https://goo.gl/maps/LPW7pczjzW62" target="_blank"><img width=32 src="images/gmaps.ico"></a>
-									<a href="http://scholar.google.com/citations?user=wVVAv80AAAAJ" target="_blank"><img width=32 src="images/gscholar.ico"></a>
+									<a href="http://scholar.google.com/citations?user=wVVAv80AAAAJ" target="_blank" data-toggle="popover" title="Popover Header" data-content="Google Maps"><img width=32 src="images/gscholar.ico"></a>
 									<a href="https://www.linkedin.com/pub/ashutosh-pattnaik/46/696/70b" target="_blank"><img width=32 src="images/linkedin.ico"></a>
-									<a href="mailto:ashutosh@cse.psu.edu" target="_blank"><img width=32 src="images/mail.ico"></a><br>
 									<br>
 									Recent News!<br>
 									<img width=24 src="images/paper-icon.png"> Two papers accepted in <a href="http://pactconf.org/program/pact-2016-accepted-papers/"  target="_blank">PACT 2016</a><br>
