update bold acads

--- a/index.html
+++ b/index.html
@@ -278,14 +278,14 @@ Proceedings of the <a href="http://www.icccs.co.in/" target="_blank"> 2nd Intern
 				<a class="image"><img src="images/psuseal.png" alt="" data-position="center center"  width="120px" height="120px"/></a>
 			</td>
 			<td>
-				<p>Ph.D. Candidate <br><a href="http://www.cse.psu.edu/" target="_blank">Computer Science and Engineering</a>, <a href="http://www.psu.edu/" target="_blank">The Pennsylvania State University</a><br>August 2013 - Present</p>
+				<p><b>Ph.D. Candidate in <a href="http://www.cse.psu.edu/" target="_blank">Computer Science and Engineering</a></b><br>, <a href="http://www.psu.edu/" target="_blank">The Pennsylvania State University</a><br>August 2013 - Present</p>
 			</td>
 		</tr>
 		<tr><td style="vertical-align:top;">
 			<a class="image"><img src="images/nitrkl.png" alt="" data-position="center center"  width="120px" height="120px"/></a>
 		</td>
 		<td>
-			<p>B. Tech. in <a href="http://nitrkl.ac.in/Academic/1Department/Home.aspx?hrtuery765hd=OA==-GS5YNjRcEt0=" target="_blank">Electronics and Instrumentation Engineering</a><br><a href="http://www.nitrkl.ac.in/" target="_blank">National Institute of Technology, Rourkela</a> <br>
+			<p><b>B. Tech. in <a href="http://nitrkl.ac.in/Academic/1Department/Home.aspx?hrtuery765hd=OA==-GS5YNjRcEt0=" target="_blank">Electronics and Instrumentation Engineering</a></b><br><a href="http://www.nitrkl.ac.in/" target="_blank">National Institute of Technology, Rourkela</a> <br>
 				August 2009 - May 2013<br>
 				Thesis: <a href="http://ethesis.nitrkl.ac.in/5283/1/109EI0297.pdf" target="_blank">Robotic Arm Control Through Human Arm Movement using Accelerometers</a> 
 			</p>
