--- a/index.html
+++ b/index.html
@@ -51,14 +51,14 @@
 									<a href="http://www.cse.psu.edu/" target="_blank">Department of Computer Science and Engineering</a><br>
 									<a href="http://www.psu.edu/" target="_blank">Penn State University</a>, University Park, PA, 16802 <br>
 									<a href="mailto:ashutosh@cse.psu.edu" target="_blank"><img width=32 src="images/mail.ico" style="vertical-align:middle"> ashutosh@cse.psu.edu</a><br>
-									<a href="https://goo.gl/maps/LPW7pczjzW62" target="_blank"><img width=32 src="images/gmaps.ico"></a>
-									<a href="http://scholar.google.com/citations?user=wVVAv80AAAAJ" target="_blank" data-toggle="popover" title="Popover Header" data-content="Google Maps"><img width=32 src="images/gscholar.ico"></a>
-									<a href="https://www.linkedin.com/pub/ashutosh-pattnaik/46/696/70b" target="_blank"><img width=32 src="images/linkedin.ico"></a>
+									<a href="https://goo.gl/maps/LPW7pczjzW62" target="_blank"><img width=32 src="images/gmaps.ico" style="vertical-align:middle"></a>
+									<a href="http://scholar.google.com/citations?user=wVVAv80AAAAJ" target="_blank" data-toggle="popover" title="Popover Header" data-content="Google Maps"><img width=32 src="images/gscholar.ico" style="vertical-align:middle"></a>
+									<a href="https://www.linkedin.com/pub/ashutosh-pattnaik/46/696/70b" target="_blank"><img width=32 src="images/linkedin.ico" style="vertical-align:middle"></a>
 									<br>
 									Recent News!<br>
-									<img width=24 src="images/paper-icon.png"> Two papers accepted in <a href="http://pactconf.org/program/pact-2016-accepted-papers/"  target="_blank">PACT 2016</a><br>
-									<img width=24 src="images/work.png"> I am currently interning at<a href="http://www.amd.com/en-us/who-we-are/corporate-information/research/" target="_blank"> AMD Research</a> for the summer.<br>
-									<img width=24 src="images/paper-icon.png"> Submission Chair for <a href="http://ics16.bilkent.edu.tr"  target="_blank">ICS 2016</a><br></p>
+									<img width=24 src="images/paper-icon.png" style="vertical-align:middle"> Two papers accepted in <a href="http://pactconf.org/program/pact-2016-accepted-papers/"  target="_blank">PACT 2016</a><br>
+									<img width=24 src="images/work.png" style="vertical-align:middle"> I am currently interning at<a href="http://www.amd.com/en-us/who-we-are/corporate-information/research/" target="_blank"> AMD Research</a> for the summer.<br>
+									<img width=24 src="images/paper-icon.png" style="vertical-align:middle"> Submission Chair for <a href="http://ics16.bilkent.edu.tr"  target="_blank">ICS 2016</a><br></p>
 									<ul class="actions">
 									<li><a href="#one" class="button">Learn more</a></li>
 									<li><a href="cv.pdf" target="_blank" class="button">CV</a></li>
