--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
 <section>
 	<span class="icon major fa-cog"></span>
 	<h3>SIGMETRICS 2016</h3>
-	<p><b>Exploiting Core-Criticality for Enhanced GPU Performance <a href="http://ashutoshpattnaik.github.io/docs/2016_SIGMETRICS_Adwait.pdf" target="_blank"> [PDF]</a> <a href="http://ashutoshpattnaik.github.io/ppt/Clams-Sigmetrics-2016.pptx" target="_blank">[PPTX]</a> </b><br />
+	<p><b>Exploiting Core-Criticality for Enhanced GPU Performance <br><a href="http://ashutoshpattnaik.github.io/docs/2016_SIGMETRICS_Adwait.pdf" target="_blank"> [PDF]</a> <a href="http://ashutoshpattnaik.github.io/ppt/Clams-Sigmetrics-2016.pptx" target="_blank">[PPTX]</a> </b><br />
 		Adwait Jog, Onur Kayiran, <b>Ashutosh Pattnaik</b>, Mahmut T. Kandemir, Onur Mutlu, Ravishankar Iyer, Chita R. Das <br></p>
 									<!-- <p align="justify" style="text-align:justify">Adwait Jog, Onur Kayiran, <b>Ashutosh Pattnaik</b>, Mahmut T. Kandemir, Onur Mutlu, Ravishankar Iyer, Chita R. Das <br> <a href="http://ashutoshpattnaik.github.io/docs/2016_SIGMETRICS_Adwait.pdf" target="_blank"> <i><span style="color: DarkBlue ">Exploiting Core-Criticality for Enhanced GPU Performance </span></i></a>, <br>
 Proceedings of the <a href="http://www.sigmetrics.org/sigmetrics2016/" target="_blank"> 42nd ACM International Conference on Measurement and Modeling of Computer Systems </a> 
@@ -157,7 +157,7 @@ Proceedings of the <a href="http://www.sigmetrics.org/sigmetrics2016/" target="_
 <section>
 	<span class="icon major fa-desktop"></span>
 	<h3>MEMSYS 2015</h3>
-	<p><b>Anatomy of GPU Memory System for Multi-Application Execution <a href="http://ashutoshpattnaik.github.io/docs/2015_MEMSYS_Adwait.pdf" target="_blank"> [PDF]</a> <a href="http://ashutoshpattnaik.github.io/ppt/Anatomy-Memsys-2015.pptx" target="_blank">[PPTX]</a></b><br />
+	<p><b>Anatomy of GPU Memory System for Multi-Application Execution <br><a href="http://ashutoshpattnaik.github.io/docs/2015_MEMSYS_Adwait.pdf" target="_blank"> [PDF]</a> <a href="http://ashutoshpattnaik.github.io/ppt/Anatomy-Memsys-2015.pptx" target="_blank">[PPTX]</a></b><br />
 		Adwait Jog, Onur Kayiran, Tuba Kesten, <b>Ashutosh Pattnaik</b>, Evgeny Bolotin, Niladrish Chatterjee, Stephen W. Keckler, Mahmut T. Kandemir, Chita R. Das <br></p>
 									<!-- <p align="justify" style="text-align:justify">Adwait Jog, Onur Kayiran, Tuba Kesten, <b>Ashutosh Pattnaik</b>, Evgeny Bolotin, Niladrish Chatterjee, Stephen W. Keckler, Mahmut T. Kandemir, Chita R. Das <br> <a href="http://ashutoshpattnaik.github.io/docs/2015_MEMSYS_Adwait.pdf" target="_blank"> <i><span style="color: DarkBlue ">Anatomy of GPU Memory System for Multi-Application Execution</span></i></a>, <br>
 Proceedings of the <a href="http://www.memsys.io/" target="_blank"> 1st International Symposium on Memory Systems </a> 
@@ -167,7 +167,7 @@ Proceedings of the <a href="http://www.memsys.io/" target="_blank"> 1st Internat
 <section>
 	<span class="icon major fa-chain"></span>
 	<h3>ICCCS 2012</h3>
-	<p><b>A New and Efficient Method for Removal of High Density Salt and Pepper Noise Through Cascade Decision based Filtering Algorithm <a href="http://ashutoshpattnaik.github.io/docs/2012_ICCCS_Ashutosh.pdf" target="_blank"> [PDF]</a></b><br />
+	<p><b>A New and Efficient Method for Removal of High Density Salt and Pepper Noise Through Cascade Decision based Filtering Algorithm <br><a href="http://ashutoshpattnaik.github.io/docs/2012_ICCCS_Ashutosh.pdf" target="_blank"> [PDF]</a></b><br />
 		<b>Ashutosh Pattnaik</b>, Sharad Agarwal, Subhasis Chand <br> </p>
 	</section>
 	<section>
