--- a/index.html
+++ b/index.html
@@ -56,32 +56,33 @@
 									<a href="https://www.linkedin.com/pub/ashutosh-pattnaik/46/696/70b" target="_blank"><img width=32 src="images/linkedin.ico" style="vertical-align:middle"></a>
 									<br>
 									Recent News!<br>
+									<img width=24 src="images/paper-icon.png" style="vertical-align:middle"> Paper accepted in <a href="http://www.iiswc.org/iiswc2016/index.html"  target="_blank">IISWC 2016</a><br>
 									<img width=24 src="images/paper-icon.png" style="vertical-align:middle"> Two papers accepted in <a href="http://pactconf.org/program/pact-2016-accepted-papers/"  target="_blank">PACT 2016</a><br>
 									<img width=24 src="images/work.png" style="vertical-align:middle"> I am currently interning at<a href="http://www.amd.com/en-us/who-we-are/corporate-information/research/" target="_blank"> AMD Research</a> for the summer.<br>
-									<img width=24 src="images/paper-icon.png" style="vertical-align:middle"> Submission Chair for <a href="http://ics16.bilkent.edu.tr"  target="_blank">ICS 2016</a><br></p>
+									<!-- <img width=24 src="images/paper-icon.png" style="vertical-align:middle"> Submission Chair for <a href="http://ics16.bilkent.edu.tr"  target="_blank">ICS 2016</a><br></p> -->
 									<ul class="actions">
-									<li><a href="#one" class="button">Learn more</a></li>
-									<li><a href="cv.pdf" target="_blank" class="button">CV</a></li>
-								</ul>
+										<li><a href="#one" class="button">Learn more</a></li>
+										<li><a href="cv.pdf" target="_blank" class="button">CV</a></li>
+									</ul>
+								</div>
 							</div>
-						</div>
+						</section>
 					</section>
-				</section>
-			</div>
-		</section>
+				</div>
+			</section>
 
 
 
-		<!-- One -->
-		<section id="one" class="wrapper style2 spotlights">
-			<section>
-				<a class="image"><img src="images/about.jpg" alt="" data-position="center center" /></a>
-				<div class="content">
-					<div class="inner">
-						<h2>ABOUT ME</h2>
-						<p align="justify" style="text-align:justify" style="font-size:115%">
-							I am currently pursuing my PhD in <a href="http://www.cse.psu.edu/" target="_blank">Computer Science and Engineering</a> at <a href="http://www.psu.edu/" target="_blank">The Pennsylvania State University</a>. I am a member of <a href="http://www.cse.psu.edu/hpcl/people.html" target="_blank">High Performance Computing Lab</a> where I work with my advisors <a href="http://www.cse.psu.edu/people/das" target="_blank">Dr. Chita R. Das</a>. and <a href="http://www.cse.psu.edu/~kandemir/" target="_blank">Dr. Mahmut T. Kandemir</a>. I also collaborate with 
-							<a href="http://users.ece.cmu.edu/~omutlu/">Dr. Onur Mutlu</a>. My current research focuses on designing high performance energy-efficient heterogeneous GPU architectures.
+			<!-- One -->
+			<section id="one" class="wrapper style2 spotlights">
+				<section>
+					<a class="image"><img src="images/about.jpg" alt="" data-position="center center" /></a>
+					<div class="content">
+						<div class="inner">
+							<h2>ABOUT ME</h2>
+							<p align="justify" style="text-align:justify" style="font-size:115%">
+								I am currently pursuing my PhD in <a href="http://www.cse.psu.edu/" target="_blank">Computer Science and Engineering</a> at <a href="http://www.psu.edu/" target="_blank">The Pennsylvania State University</a>. I am a member of <a href="http://www.cse.psu.edu/hpcl/people.html" target="_blank">High Performance Computing Lab</a> where I work with my advisors <a href="http://www.cse.psu.edu/people/das" target="_blank">Dr. Chita R. Das</a>. and <a href="http://www.cse.psu.edu/~kandemir/" target="_blank">Dr. Mahmut T. Kandemir</a>. I also collaborate with 
+								<a href="http://users.ece.cmu.edu/~omutlu/">Dr. Onur Mutlu</a>. My current research focuses on designing high performance energy-efficient heterogeneous GPU architectures.
 							</p>
 							<ul class="actions">
 								<li><a href="#four" class="button">Academic Background</a></li>
@@ -96,9 +97,9 @@
 						<div class="inner">
 							<h2>CURRENT RESEARCH</h2>
 							<p align="justify" style="text-align:justify" style="font-size:115%">
-							I am currently working on understanding the research issues and opportunities involved in processing in memory in GPUs. 
-							Specifically, I am trying to understand the issues of "which" computations to offload to the PIM processors, and "how" to
-							co-locate the computations and data to minimize the data movements in a GPU system while improving performance.
+								I am currently working on understanding the research issues and opportunities involved in processing in memory in GPUs. 
+								Specifically, I am trying to understand the issues of "which" computations to offload to the PIM processors, and "how" to
+								co-locate the computations and data to minimize the data movements in a GPU system while improving performance.
 							</p>
 							<ul class="actions">
 								<li><a href="#two" class="button">Publications</a></li>
@@ -127,10 +128,16 @@
 							<!-- 		<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus, lacus eget hendrerit bibendum, urna est aliquam sem, sit amet imperdiet est velit quis lorem.</p> -->
 							<div class="features">
 								<section>
-									<span class="icon major fa-code"></span>
-									<h3>PACT 2016</h3>
-									<p><b>Kernel Scheduling Techniques for PIM-Assisted GPU Architectures</b><br />
-										<b>Ashutosh Pattnaik</b>, Xulong Tang, Adwait Jog, Onur Kayiran, Asit K. Mishra, Mahmut T. Kandemir, Onur Mutlu, Chita R. Das <br /></p>
+									<span class="icon major fa-chain"></span>
+									<h3>IISWC 2016</h3>
+									<p><b>Measuring and Modeling On-Chip Interconnect Power on Real </b><br />
+										Vignesh Adhinarayanan, Indrani Paul, Joseph Greathouse, Wei N. Huang, <b>Ashutosh Pattnaik</b>, Wu-chun Feng <br> </p>
+									</section>
+									<section>
+										<span class="icon major fa-code"></span>
+										<h3>PACT 2016</h3>
+										<p><b>Kernel Scheduling Techniques for PIM-Assisted GPU Architectures</b><br />
+											<b>Ashutosh Pattnaik</b>, Xulong Tang, Adwait Jog, Onur Kayiran, Asit K. Mishra, Mahmut T. Kandemir, Onur Mutlu, Chita R. Das <br /></p>
 <!-- To appear in the Proceedings of the <a href="http://pactconf.org/">25th International Conference on Parallel Architectures and Compilation Techniques</a> 
 <b><span style="color: FireBrick ">(PACT)</span></b>, Haifa, Israel, September 2016 <br />
 (Acceptance rate: 31/139 ≈ 22.3%) <br /></p> -->
@@ -170,8 +177,7 @@ Proceedings of the <a href="http://www.memsys.io/" target="_blank"> 1st Internat
 	<p><b>A New and Efficient Method for Removal of High Density Salt and Pepper Noise Through Cascade Decision based Filtering Algorithm <br><a href="http://ashutoshpattnaik.github.io/docs/2012_ICCCS_Ashutosh.pdf" target="_blank"> [PDF]</a></b><br />
 		<b>Ashutosh Pattnaik</b>, Sharad Agarwal, Subhasis Chand <br> </p>
 	</section>
-	<section>
-	</section>
+
 <!-- 								<section>
 									<span class="icon major fa-diamond"></span>
 									<h3>Aliquam urna dapibus</h3>
@@ -248,24 +254,24 @@ Proceedings of the <a href="http://www.icccs.co.in/" target="_blank"> 2nd Intern
 		</tr>
 	</table>
 
-<h3>TALKS & PRESENTATIONS</h3>
-<table>
-<tr>
-<td>
-<i>Exploiting Core-Criticality for Enhanced GPU Performance </i><br>Antibes Juan-les-Pins, France, SIGMETRICS 2016 <br>
-</td></tr>
-<tr><td>
-<i>A New and Efficient Method for Removal of High Density Salt and Pepper Noise Through Cascade Decision based Filtering Algorithm</i><br>Rourkela, India, ICCCS 2012<br>
-</td></tr>
-</table>
-<table>
-<h3>TEACHING</h3>
-<tr><td>Teaching Assistant, CMPEN 431 - Introduction to Computer Architecture, Spring 2014<br>
-</td></tr>
-<tr><td>Teaching Assistant, CMPEN 270 - Digital Design: Theory and Practice, Fall 2013
-</td></tr>
-</table>
-</div>
+	<h3>TALKS & PRESENTATIONS</h3>
+	<table>
+		<tr>
+			<td>
+				<i>Exploiting Core-Criticality for Enhanced GPU Performance </i><br>Antibes Juan-les-Pins, France, SIGMETRICS 2016 <br>
+			</td></tr>
+			<tr><td>
+				<i>A New and Efficient Method for Removal of High Density Salt and Pepper Noise Through Cascade Decision based Filtering Algorithm</i><br>Rourkela, India, ICCCS 2012<br>
+			</td></tr>
+		</table>
+		<table>
+			<h3>TEACHING</h3>
+			<tr><td>Teaching Assistant, CMPEN 431 - Introduction to Computer Architecture, Spring 2014<br>
+			</td></tr>
+			<tr><td>Teaching Assistant, CMPEN 270 - Digital Design: Theory and Practice, Fall 2013
+			</td></tr>
+		</table>
+	</div>
 </section>
 
 
@@ -435,21 +441,21 @@ Proceedings of the <a href="http://www.icccs.co.in/" target="_blank"> 2nd Intern
 <!-- Start of StatCounter Code for Default Guide -->
 
 <script type="text/javascript">
-var sc_project=10245763; 
-var sc_invisible=1; 
-var sc_security="6de2261b"; 
-var scJsHost = (("https:" == document.location.protocol) ?
-"https://secure." : "http://www.");
-document.write("<sc"+"ript type='text/javascript' src='" +
-scJsHost+
-"statcounter.com/counter/counter.js'></"+"script>");
-</script>
-<noscript><div class="statcounter"><a title="free hit
-counter" href="http://statcounter.com/free-hit-counter/"
-target="_blank"><img class="statcounter"
-src="http://c.statcounter.com/10245763/0/6de2261b/1/"
-alt="free hit counter"></a></div></noscript>
-<!-- End of StatCounter Code for Default Guide -->
+	var sc_project=10245763; 
+	var sc_invisible=1; 
+	var sc_security="6de2261b"; 
+	var scJsHost = (("https:" == document.location.protocol) ?
+		"https://secure." : "http://www.");
+	document.write("<sc"+"ript type='text/javascript' src='" +
+		scJsHost+
+		"statcounter.com/counter/counter.js'></"+"script>");
+	</script>
+	<noscript><div class="statcounter"><a title="free hit
+		counter" href="http://statcounter.com/free-hit-counter/"
+		target="_blank"><img class="statcounter"
+		src="http://c.statcounter.com/10245763/0/6de2261b/1/"
+		alt="free hit counter"></a></div></noscript>
+		<!-- End of StatCounter Code for Default Guide -->
 
-</body>
-</html>
+	</body>
+	</html>
