update iiswc ppr name

--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
 								<section>
 									<span class="icon major fa-chain"></span>
 									<h3>IISWC 2016</h3>
-									<p><b>Measuring and Modeling On-Chip Interconnect Power on Real </b><br />
+									<p><b>Measuring and Modeling On-Chip Interconnect Power on Real Hardware</b><br />
 										Vignesh Adhinarayanan, Indrani Paul, Joseph Greathouse, Wei N. Huang, <b>Ashutosh Pattnaik</b>, Wu-chun Feng <br> </p>
 									</section>
 									<section>
