--- a/index.html
+++ b/index.html
@@ -128,54 +128,64 @@
 							<!-- 		<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus, lacus eget hendrerit bibendum, urna est aliquam sem, sit amet imperdiet est velit quis lorem.</p> -->
 							<div class="features">
 								<section>
-									<span class="icon major fa-chain"></span>
+									<!-- <span class="icon major fa-chain"></span> -->
 									<h3>IISWC 2016</h3>
-									<p><b>Measuring and Modeling On-Chip Interconnect Power on Real Hardware</b><br />
-										Vignesh Adhinarayanan, Indrani Paul, Joseph Greathouse, Wei N. Huang, <b>Ashutosh Pattnaik</b>, Wu-chun Feng <br> </p>
+									<b>Measuring and Modeling On-Chip Interconnect Power on Real Hardware</b><br />
+										Vignesh Adhinarayanan, Indrani Paul, Joseph Greathouse, Wei N. Huang, <b>Ashutosh Pattnaik</b>, Wu-chun Feng
 									</section>
+									</div>
+									<div class="features">
 									<section>
-										<span class="icon major fa-code"></span>
+										<!-- <span class="icon major fa-code"></span> -->
 										<h3>PACT 2016</h3>
-										<p><b>Kernel Scheduling Techniques for PIM-Assisted GPU Architectures</b><br />
-											<b>Ashutosh Pattnaik</b>, Xulong Tang, Adwait Jog, Onur Kayiran, Asit K. Mishra, Mahmut T. Kandemir, Onur Mutlu, Chita R. Das <br /></p>
+										<b>Scheduling Techniques for GPU Architectures with Processing-In-Memory Capabilities <a href="http://ashutoshpattnaik.github.io/docs/2016_PACT_Ashutosh.pdf" target="_blank"> [PDF]</a></b><br />
+											<b>Ashutosh Pattnaik</b>, Xulong Tang, Adwait Jog, Onur Kayiran, Asit K. Mishra, Mahmut T. Kandemir, Onur Mutlu, Chita R. Das <br />
 <!-- To appear in the Proceedings of the <a href="http://pactconf.org/">25th International Conference on Parallel Architectures and Compilation Techniques</a> 
 <b><span style="color: FireBrick ">(PACT)</span></b>, Haifa, Israel, September 2016 <br />
 (Acceptance rate: 31/139 ≈ 22.3%) <br /></p> -->
 </section>
+</div>
+<div class="features">
 <section>
-	<span class="icon major fa-lock"></span>
+	<!-- <span class="icon major fa-lock"></span> -->
 	<h3>PACT 2016</h3>
-	<p><b>Fine-grain Datapath Management for Scale-up GPUs</b><br />
-		Onur Kayiran, Adwait Jog, <b>Ashutosh Pattnaik</b>, Rachata Ausavarungnirun, Xulong Tang, Mahmut T. Kandemir, Gabriel H. Loh, Onur Mutlu, Chita R. Das <br /></p>
+	<b>µC-States: Fine-grained GPU Datapath Power Management</b><br />
+		Onur Kayiran, Adwait Jog, <b>Ashutosh Pattnaik</b>, Rachata Ausavarungnirun, Xulong Tang, Mahmut T. Kandemir, Gabriel H. Loh, Onur Mutlu, Chita R. Das <br />
 <!-- To appear in the Proceedings of the <a href="http://pactconf.org/">25th International Conference on Parallel Architectures and Compilation Techniques</a> 
 <b><span style="color: FireBrick ">(PACT)</span></b>, Haifa, Israel, September 2016 <br />
 (Acceptance rate: 31/139 ≈ 22.3%) <br /> </p>-->
 </section>
+</div>
+<div class="features">
 <section>
-	<span class="icon major fa-cog"></span>
+	<!-- <span class="icon major fa-cog"></span> -->
 	<h3>SIGMETRICS 2016</h3>
-	<p><b>Exploiting Core-Criticality for Enhanced GPU Performance <br><a href="http://ashutoshpattnaik.github.io/docs/2016_SIGMETRICS_Adwait.pdf" target="_blank"> [PDF]</a> <a href="http://ashutoshpattnaik.github.io/ppt/Clams-Sigmetrics-2016.pptx" target="_blank">[PPTX]</a> </b><br />
-		Adwait Jog, Onur Kayiran, <b>Ashutosh Pattnaik</b>, Mahmut T. Kandemir, Onur Mutlu, Ravishankar Iyer, Chita R. Das <br></p>
+	<b>Exploiting Core-Criticality for Enhanced GPU Performance <a href="http://ashutoshpattnaik.github.io/docs/2016_SIGMETRICS_Adwait.pdf" target="_blank"> [PDF]</a> <a href="http://ashutoshpattnaik.github.io/ppt/Clams-Sigmetrics-2016.pptx" target="_blank">[PPTX]</a> </b><br />
+		Adwait Jog, Onur Kayiran, <b>Ashutosh Pattnaik</b>, Mahmut T. Kandemir, Onur Mutlu, Ravishankar Iyer, Chita R. Das <br>
 									<!-- <p align="justify" style="text-align:justify">Adwait Jog, Onur Kayiran, <b>Ashutosh Pattnaik</b>, Mahmut T. Kandemir, Onur Mutlu, Ravishankar Iyer, Chita R. Das <br> <a href="http://ashutoshpattnaik.github.io/docs/2016_SIGMETRICS_Adwait.pdf" target="_blank"> <i><span style="color: DarkBlue ">Exploiting Core-Criticality for Enhanced GPU Performance </span></i></a>, <br>
 Proceedings of the <a href="http://www.sigmetrics.org/sigmetrics2016/" target="_blank"> 42nd ACM International Conference on Measurement and Modeling of Computer Systems </a> 
 <b><span style="color: FireBrick ">(SIGMETRICS)</span></b>, Antibes Juan-Les-Pins, France, June 2016 <br> 
 </p> -->
 </section>
+</div>
+<div class="features">
 <section>
-	<span class="icon major fa-desktop"></span>
+	<!-- <span class="icon major fa-desktop"></span> -->
 	<h3>MEMSYS 2015</h3>
-	<p><b>Anatomy of GPU Memory System for Multi-Application Execution <br><a href="http://ashutoshpattnaik.github.io/docs/2015_MEMSYS_Adwait.pdf" target="_blank"> [PDF]</a> <a href="http://ashutoshpattnaik.github.io/ppt/Anatomy-Memsys-2015.pptx" target="_blank">[PPTX]</a></b><br />
-		Adwait Jog, Onur Kayiran, Tuba Kesten, <b>Ashutosh Pattnaik</b>, Evgeny Bolotin, Niladrish Chatterjee, Stephen W. Keckler, Mahmut T. Kandemir, Chita R. Das <br></p>
+	<b>Anatomy of GPU Memory System for Multi-Application Execution <a href="http://ashutoshpattnaik.github.io/docs/2015_MEMSYS_Adwait.pdf" target="_blank"> [PDF]</a> <a href="http://ashutoshpattnaik.github.io/ppt/Anatomy-Memsys-2015.pptx" target="_blank">[PPTX]</a></b><br />
+		Adwait Jog, Onur Kayiran, Tuba Kesten, <b>Ashutosh Pattnaik</b>, Evgeny Bolotin, Niladrish Chatterjee, Stephen W. Keckler, Mahmut T. Kandemir, Chita R. Das <br>
 									<!-- <p align="justify" style="text-align:justify">Adwait Jog, Onur Kayiran, Tuba Kesten, <b>Ashutosh Pattnaik</b>, Evgeny Bolotin, Niladrish Chatterjee, Stephen W. Keckler, Mahmut T. Kandemir, Chita R. Das <br> <a href="http://ashutoshpattnaik.github.io/docs/2015_MEMSYS_Adwait.pdf" target="_blank"> <i><span style="color: DarkBlue ">Anatomy of GPU Memory System for Multi-Application Execution</span></i></a>, <br>
 Proceedings of the <a href="http://www.memsys.io/" target="_blank"> 1st International Symposium on Memory Systems </a> 
 <b><span style="color: FireBrick ">(MEMSYS)</span></b>, Washington, D.C., USA, October 2015<br> 
 </p> -->
 </section>
+</div>
+<div class="features">
 <section>
-	<span class="icon major fa-chain"></span>
+	<!-- <span class="icon major fa-chain"></span> -->
 	<h3>ICCCS 2012</h3>
-	<p><b>A New and Efficient Method for Removal of High Density Salt and Pepper Noise Through Cascade Decision based Filtering Algorithm <br><a href="http://ashutoshpattnaik.github.io/docs/2012_ICCCS_Ashutosh.pdf" target="_blank"> [PDF]</a></b><br />
-		<b>Ashutosh Pattnaik</b>, Sharad Agarwal, Subhasis Chand <br> </p>
+	<b>A New and Efficient Method for Removal of High Density Salt and Pepper Noise Through Cascade Decision based Filtering Algorithm <a href="http://ashutoshpattnaik.github.io/docs/2012_ICCCS_Ashutosh.pdf" target="_blank"> [PDF]</a></b><br />
+		<b>Ashutosh Pattnaik</b>, Sharad Agarwal, Subhasis Chand <br>
 	</section>
 
 <!-- 								<section>
