--- a/index.html
+++ b/index.html
@@ -58,7 +58,6 @@
 									Recent News!<br>
 									<img width=24 src="images/paper-icon.png" style="vertical-align:middle"> Paper accepted in <a href="http://www.iiswc.org/iiswc2016/index.html"  target="_blank">IISWC 2016</a><br>
 									<img width=24 src="images/paper-icon.png" style="vertical-align:middle"> Two papers accepted in <a href="http://pactconf.org/program/pact-2016-accepted-papers/"  target="_blank">PACT 2016</a><br>
-									<img width=24 src="images/work.png" style="vertical-align:middle"> I am currently interning at<a href="http://www.amd.com/en-us/who-we-are/corporate-information/research/" target="_blank"> AMD Research</a> for the summer.<br>
 									<!-- <img width=24 src="images/paper-icon.png" style="vertical-align:middle"> Submission Chair for <a href="http://ics16.bilkent.edu.tr"  target="_blank">ICS 2016</a><br></p> -->
 									<ul class="actions">
 										<li><a href="#one" class="button">Learn more</a></li>
@@ -125,12 +124,11 @@
 					<section id="two" class="wrapper style1 fade-up">
 						<div class="inner">
 							<h2>PUBLICATIONS</h2>
-							<!-- 		<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus, lacus eget hendrerit bibendum, urna est aliquam sem, sit amet imperdiet est velit quis lorem.</p> -->
 							<div class="features">
 								<section>
 									<!-- <span class="icon major fa-chain"></span> -->
 									<h3>IISWC 2016</h3>
-									<b>Measuring and Modeling On-Chip Interconnect Power on Real Hardware</b><br />
+									<b>Measuring and Modeling On-Chip Interconnect Power on Real Hardware <a href="http://ashutoshpattnaik.github.io/docs/2016_IISWC_Vignesh.pdf" target="_blank"> [PDF]</a></b><br />
 										Vignesh Adhinarayanan, Indrani Paul, Joseph Greathouse, Wei N. Huang, <b>Ashutosh Pattnaik</b>, Wu-chun Feng
 									</section>
 									</div>
@@ -138,7 +136,7 @@
 									<section>
 										<!-- <span class="icon major fa-code"></span> -->
 										<h3>PACT 2016</h3>
-										<b>Scheduling Techniques for GPU Architectures with Processing-In-Memory Capabilities <a href="http://ashutoshpattnaik.github.io/docs/2016_PACT_Ashutosh.pdf" target="_blank"> [PDF]</a></b><br />
+										<b>Scheduling Techniques for GPU Architectures with Processing-In-Memory Capabilities <a href="http://ashutoshpattnaik.github.io/docs/2016_PACT_Ashutosh.pdf" target="_blank"> [PDF]</a> <a href="http://ashutoshpattnaik.github.io/ppt/2016_PACT_Ashutosh.pptx" target="_blank">[PPTX]</a> </b><br />
 											<b>Ashutosh Pattnaik</b>, Xulong Tang, Adwait Jog, Onur Kayiran, Asit K. Mishra, Mahmut T. Kandemir, Onur Mutlu, Chita R. Das <br />
 <!-- To appear in the Proceedings of the <a href="http://pactconf.org/">25th International Conference on Parallel Architectures and Compilation Techniques</a> 
 <b><span style="color: FireBrick ">(PACT)</span></b>, Haifa, Israel, September 2016 <br />
@@ -149,7 +147,7 @@
 <section>
 	<!-- <span class="icon major fa-lock"></span> -->
 	<h3>PACT 2016</h3>
-	<b>µC-States: Fine-grained GPU Datapath Power Management</b><br />
+	<b>µC-States: Fine-grained GPU Datapath Power Management <a href="http://ashutoshpattnaik.github.io/docs/2016_PACT_Onur.pdf" target="_blank"> [PDF]</a> <a href="http://ashutoshpattnaik.github.io/ppt/2016_PACT_Onur.pptx" target="_blank">[PPTX]</a></b><br />
 		Onur Kayiran, Adwait Jog, <b>Ashutosh Pattnaik</b>, Rachata Ausavarungnirun, Xulong Tang, Mahmut T. Kandemir, Gabriel H. Loh, Onur Mutlu, Chita R. Das <br />
 <!-- To appear in the Proceedings of the <a href="http://pactconf.org/">25th International Conference on Parallel Architectures and Compilation Techniques</a> 
 <b><span style="color: FireBrick ">(PACT)</span></b>, Haifa, Israel, September 2016 <br />
@@ -160,7 +158,7 @@
 <section>
 	<!-- <span class="icon major fa-cog"></span> -->
 	<h3>SIGMETRICS 2016</h3>
-	<b>Exploiting Core-Criticality for Enhanced GPU Performance <a href="http://ashutoshpattnaik.github.io/docs/2016_SIGMETRICS_Adwait.pdf" target="_blank"> [PDF]</a> <a href="http://ashutoshpattnaik.github.io/ppt/Clams-Sigmetrics-2016.pptx" target="_blank">[PPTX]</a> </b><br />
+	<b>Exploiting Core-Criticality for Enhanced GPU Performance <a href="http://ashutoshpattnaik.github.io/docs/2016_SIGMETRICS_Adwait.pdf" target="_blank"> [PDF]</a> <a href="http://ashutoshpattnaik.github.io/ppt/2016_SIGMETRICS_Adwait.pptx" target="_blank">[PPTX]</a> </b><br />
 		Adwait Jog, Onur Kayiran, <b>Ashutosh Pattnaik</b>, Mahmut T. Kandemir, Onur Mutlu, Ravishankar Iyer, Chita R. Das <br>
 									<!-- <p align="justify" style="text-align:justify">Adwait Jog, Onur Kayiran, <b>Ashutosh Pattnaik</b>, Mahmut T. Kandemir, Onur Mutlu, Ravishankar Iyer, Chita R. Das <br> <a href="http://ashutoshpattnaik.github.io/docs/2016_SIGMETRICS_Adwait.pdf" target="_blank"> <i><span style="color: DarkBlue ">Exploiting Core-Criticality for Enhanced GPU Performance </span></i></a>, <br>
 Proceedings of the <a href="http://www.sigmetrics.org/sigmetrics2016/" target="_blank"> 42nd ACM International Conference on Measurement and Modeling of Computer Systems </a> 
@@ -172,7 +170,7 @@ Proceedings of the <a href="http://www.sigmetrics.org/sigmetrics2016/" target="_
 <section>
 	<!-- <span class="icon major fa-desktop"></span> -->
 	<h3>MEMSYS 2015</h3>
-	<b>Anatomy of GPU Memory System for Multi-Application Execution <a href="http://ashutoshpattnaik.github.io/docs/2015_MEMSYS_Adwait.pdf" target="_blank"> [PDF]</a> <a href="http://ashutoshpattnaik.github.io/ppt/Anatomy-Memsys-2015.pptx" target="_blank">[PPTX]</a></b><br />
+	<b>Anatomy of GPU Memory System for Multi-Application Execution <a href="http://ashutoshpattnaik.github.io/docs/2015_MEMSYS_Adwait.pdf" target="_blank"> [PDF]</a> <a href="http://ashutoshpattnaik.github.io/ppt/2015_MEMSYS_Adwait.pptx" target="_blank">[PPTX]</a></b><br />
 		Adwait Jog, Onur Kayiran, Tuba Kesten, <b>Ashutosh Pattnaik</b>, Evgeny Bolotin, Niladrish Chatterjee, Stephen W. Keckler, Mahmut T. Kandemir, Chita R. Das <br>
 									<!-- <p align="justify" style="text-align:justify">Adwait Jog, Onur Kayiran, Tuba Kesten, <b>Ashutosh Pattnaik</b>, Evgeny Bolotin, Niladrish Chatterjee, Stephen W. Keckler, Mahmut T. Kandemir, Chita R. Das <br> <a href="http://ashutoshpattnaik.github.io/docs/2015_MEMSYS_Adwait.pdf" target="_blank"> <i><span style="color: DarkBlue ">Anatomy of GPU Memory System for Multi-Application Execution</span></i></a>, <br>
 Proceedings of the <a href="http://www.memsys.io/" target="_blank"> 1st International Symposium on Memory Systems </a> 
@@ -205,16 +203,6 @@ Proceedings of the <a href="http://www.icccs.co.in/" target="_blank"> 2nd Intern
 	<div class="inner">
 		<h2>WORK EXPERIENCE</h2>
 		<table>
-			<tr><td style="vertical-align:middle;">
-				<a class="image"><img src="images/amd-research.png" alt="" data-position="center center"  width="120px"/></a>
-			</td>
-			<td style="vertical-align:middle;">
-				<p>Co-Op Engineer<br> <a href="http://www.amd.com/en-us/who-we-are/corporate-information/research/" target="_blank"> AMD Research, Sunnyvale, CA</a> <br></p>
-			</td>
-			<td style="vertical-align:middle;">
-				<p>May 2016 - Present <br></p>
-			</td>
-		</tr>
 		<tr><td style="vertical-align:middle;">
 			<a class="image"><img src="images/psuseal.png" alt="" data-position="center center"  width="100px" /></a>
 		</td>
@@ -223,8 +211,19 @@ Proceedings of the <a href="http://www.icccs.co.in/" target="_blank"> 2nd Intern
 				Pennsylvania State University</p>
 			</td>
 			<td style="vertical-align:middle;">
-				<p>August 2013 - April 2016<br></p>
+				<p>August 2013 - Present<br></p>
 			</td>
+			<tr><td style="vertical-align:middle;">
+				<a class="image"><img src="images/amd-research.png" alt="" data-position="center center"  width="120px"/></a>
+			</td>
+			<td style="vertical-align:middle;">
+				<p>Co-Op Engineer<br> <a href="http://www.amd.com/en-us/who-we-are/corporate-information/research/" target="_blank"> AMD Research, Sunnyvale, CA</a> <br></p>
+			</td>
+			<td style="vertical-align:middle;">
+				<p>May 2016 - August 2016 <br></p>
+			</td>
+		</tr>
+		
 			<tr><td style="vertical-align:middle;">
 				<a class="image"><img src="images/amd-research.png" alt="" data-position="center center"  width="120px" /></a>
 			</td>
@@ -232,7 +231,7 @@ Proceedings of the <a href="http://www.icccs.co.in/" target="_blank"> 2nd Intern
 				<p>Co-Op Engineer <br> <a href="http://www.amd.com/en-us/who-we-are/corporate-information/research/" target="_blank"> AMD Research, Austin, TX</a><br></p>
 			</td>
 			<td style="vertical-align:middle;">
-				<p>June 2015 - Sept 2015<br></p>
+				<p>June 2015 - September 2015<br></p>
 			</td>
 			<tr><td style="vertical-align:middle;">
 				<a class="image"><img src="images/iit.png" alt="" data-position="center center"  width="100px" /></a>
@@ -266,6 +265,12 @@ Proceedings of the <a href="http://www.icccs.co.in/" target="_blank"> 2nd Intern
 
 	<h3>TALKS & PRESENTATIONS</h3>
 	<table>
+	<tr><td>
+				<i>Scheduling Techniques for GPU Architectures with Processing-In-Memory Capabilities </i><br>Haifa, Israel, PACT 2016<br>
+			</td></tr>
+			<tr><td>
+				<i>µC-States: Fine-grained GPU Datapath Power Management </i><br>Haifa, Israel, PACT 2016<br>
+			</td></tr>
 		<tr>
 			<td>
 				<i>Exploiting Core-Criticality for Enhanced GPU Performance </i><br>Antibes Juan-les-Pins, France, SIGMETRICS 2016 <br>
@@ -325,6 +330,8 @@ Proceedings of the <a href="http://www.icccs.co.in/" target="_blank"> 2nd Intern
 					<ul>
 						<li>Student Travel Grant:
 							<ul>
+								<li>PACT 2016
+								</li>
 								<li>SIGMETRICS 2016
 								</li>
 								<li>ISCA 2015
@@ -339,7 +346,8 @@ Proceedings of the <a href="http://www.icccs.co.in/" target="_blank"> 2nd Intern
 								</li>
 								<li><a href="http://www.acm.org/" target="_blank">ACM Student</a> 
 								</li>
-								<li><a href="http://www.sigarch.org/" target="_blank">ACM SIGARCH</a> & <a href="http://www.sigmetrics.org/" target="_blank">ACM SIGMETRICS</a> 
+								<li><a href="http://www.sigarch.org/" target="_blank">ACM SIGARCH</a> </li>
+								<li><a href="http://www.sigmetrics.org/" target="_blank">ACM SIGMETRICS</a> 
 								</li>
 							</ul>
 						</tr>
@@ -365,7 +373,7 @@ Proceedings of the <a href="http://www.icccs.co.in/" target="_blank"> 2nd Intern
 								</li>
 								<li>Petrolhead
 								</li>
-								<li>Traveller (14/196 and counting)
+								<li>Traveller (15/196 and counting)
 								</li>
 							</ul>
 						</td>
