--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 									<a href="https://www.linkedin.com/pub/ashutosh-pattnaik/46/696/70b" target="_blank"><img width=32 src="images/linkedin.ico" style="vertical-align:middle"></a>
 									<br>
 									Recent News!<br>
-									<img width=24 src="images/paper-icon.png" style="vertical-align:middle"> Paper accepted in <a href="http://www.iiswc.org/iiswc2016/index.html"  target="_blank">IISWC 2016</a><br>
+									<img width=24 src="images/paper-icon.png" style="vertical-align:middle"> Paper accepted in <a href="http://www.iiswc.org/iiswc2016/index.html"  target="_blank">IISWC 2016 [Best Paper Award!]</a><br>
 									<img width=24 src="images/paper-icon.png" style="vertical-align:middle"> Two papers accepted in <a href="http://pactconf.org/program/pact-2016-accepted-papers/"  target="_blank">PACT 2016</a><br>
 									<!-- <img width=24 src="images/paper-icon.png" style="vertical-align:middle"> Submission Chair for <a href="http://ics16.bilkent.edu.tr"  target="_blank">ICS 2016</a><br></p> -->
 									<ul class="actions">
@@ -128,7 +128,7 @@
 								<section>
 									<!-- <span class="icon major fa-chain"></span> -->
 									<h3>IISWC 2016</h3>
-									<b>Measuring and Modeling On-Chip Interconnect Power on Real Hardware <a href="http://ashutoshpattnaik.github.io/docs/2016_IISWC_Vignesh.pdf" target="_blank"> [PDF]</a></b><br />
+									<b>Measuring and Modeling On-Chip Interconnect Power on Real Hardware [Best Paper Award]<a href="http://ashutoshpattnaik.github.io/docs/2016_IISWC_Vignesh.pdf" target="_blank"> [PDF] <a href="http://ashutoshpattnaik.github.io/ppt/2016_IISWC_Vignesh.pptx" target="_blank">[PPTX]</a> </a></b><br />
 										Vignesh Adhinarayanan, Indrani Paul, Joseph Greathouse, Wei N. Huang, <b>Ashutosh Pattnaik</b>, Wu-chun Feng
 									</section>
 									</div>
