--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 	<div id="wrapper">
 
 		<!-- Intro -->
-		<section id="intro" class="wrapper style1 fullscreen fade-up">
+		<section id="intro" class="wrapper style4 fullscreen fade-up">
 			<div class="inner">
 				<h1>ASHUTOSH PATTNAIK</h1>
 				<!-- Intro -->
@@ -121,7 +121,7 @@
 					</section>
 
 					<!-- Two -->
-					<section id="two" class="wrapper style1 fade-up">
+					<section id="two" class="wrapper style2-alt fade-up">
 						<div class="inner">
 							<h2>PUBLICATIONS</h2>
 							<div class="features">
@@ -291,7 +291,7 @@ Proceedings of the <a href="http://www.icccs.co.in/" target="_blank"> 2nd Intern
 
 
 <!-- Four -->
-<section id="four" class="wrapper style1 fade-up">
+<section id="four" class="wrapper style2-alt fade-up">
 	<div class="inner">
 		<h2>ACADEMIC BACKGROUND</h2>
 		<table>
@@ -317,7 +317,7 @@ Proceedings of the <a href="http://www.icccs.co.in/" target="_blank"> 2nd Intern
 </section>
 
 <!-- Five -->
-<section id="five" class="wrapper style2-alt fade-up">
+<section id="five" class="wrapper style2 fade-up">
 	<div class="inner">
 		<h2>MISCELLANEOUS</h2>
 		<table class="imgtable"><tbody>
