--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
 									<a href="https://www.linkedin.com/pub/ashutosh-pattnaik/46/696/70b" target="_blank"><img width=32 src="images/linkedin.ico" style="vertical-align:middle"></a>
 									<br>
 									Recent News!<br>
+									<img width=24 src="images/paper-icon.png" style="vertical-align:middle"> Paper accepted in <a href="http://hpca2017.org/"  target="_blank">HPCA 2017</a><br>
 									<img width=24 src="images/paper-icon.png" style="vertical-align:middle"> Paper accepted in <a href="http://www.iiswc.org/iiswc2016/index.html"  target="_blank">IISWC 2016 [Best Paper Award!]</a><br>
 									<img width=24 src="images/paper-icon.png" style="vertical-align:middle"> Two papers accepted in <a href="http://pactconf.org/program/pact-2016-accepted-papers/"  target="_blank">PACT 2016</a><br>
 									<!-- <img width=24 src="images/paper-icon.png" style="vertical-align:middle"> Submission Chair for <a href="http://ics16.bilkent.edu.tr"  target="_blank">ICS 2016</a><br></p> -->
@@ -124,6 +125,14 @@
 					<section id="two" class="wrapper style2-alt fade-up">
 						<div class="inner">
 							<h2>PUBLICATIONS</h2>
+							<div class="features">
+								<section>
+									<!-- <span class="icon major fa-chain"></span> -->
+									<h3>HPCA 2017</h3>
+									<b>Controlled Kernel Launch for Dynamic Parallelism in GPUs<a href="http://ashutoshpattnaik.github.io/docs/2017_HPCA_Xulong.pdf" target="_blank"> [COMING SOON] <a href="http://ashutoshpattnaik.github.io/ppt/2017_HPCA_Xulong.pptx" target="_blank">[COMING SOON]</a> </a></b><br />
+										Xulong Tang, <b>Ashutosh Pattnaik</b>, Huaipan Jiang, Onur Kayiran, Adwait Jog, Sreepathi Pai, Mohamed Ibrahim, Mahmut T. Kandemir, Chita R. Das 
+									</section>
+									</div>
 							<div class="features">
 								<section>
 									<!-- <span class="icon major fa-chain"></span> -->
