--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 									<!-- <img width=24 src="images/paper-icon.png" style="vertical-align:middle"> Submission Chair for <a href="http://ics16.bilkent.edu.tr"  target="_blank">ICS 2016</a><br></p> -->
 									<ul class="actions">
 										<li><a href="#one" class="button">Learn more</a></li>
-										<li><a href="cv.pdf" target="_blank" class="button">CV</a></li>
+										<li><a href="ashutoshCV.pdf" target="_blank" class="button">CV</a></li>
 									</ul>
 								</div>
 							</div>
