--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
 								<section>
 									<!-- <span class="icon major fa-chain"></span> -->
 									<h3>HPCA 2017</h3>
-									<b>Controlled Kernel Launch for Dynamic Parallelism in GPUs<a href="http://ashutoshpattnaik.github.io/docs/2017_HPCA_Xulong.pdf" target="_blank"> [COMING SOON] <a href="http://ashutoshpattnaik.github.io/ppt/2017_HPCA_Xulong.pptx" target="_blank">[COMING SOON]</a> </a></b><br />
+									<b>Controlled Kernel Launch for Dynamic Parallelism in GPUs<a href="http://ashutoshpattnaik.github.io/docs/2017_HPCA_Xulong.pdf" target="_blank"> [PDF] <a href="http://ashutoshpattnaik.github.io/ppt/2017_HPCA_Xulong.pptx" target="_blank">[PPTX]</a> </a></b><br />
 										Xulong Tang, <b>Ashutosh Pattnaik</b>, Huaipan Jiang, Onur Kayiran, Adwait Jog, Sreepathi Pai, Mohamed Ibrahim, Mahmut T. Kandemir, Chita R. Das 
 									</section>
 									</div>
