update on the reviewer list

--- a/index.html
+++ b/index.html
@@ -57,8 +57,6 @@
 									<br>
 									Recent News!<br>
 									<img width=24 src="images/paper-icon.png" style="vertical-align:middle"> Paper accepted in <a href="http://hpca2017.org/"  target="_blank">HPCA 2017</a><br>
-									<img width=24 src="images/paper-icon.png" style="vertical-align:middle"> Paper accepted in <a href="http://www.iiswc.org/iiswc2016/index.html"  target="_blank">IISWC 2016 [Best Paper Award!]</a><br>
-									<img width=24 src="images/paper-icon.png" style="vertical-align:middle"> Two papers accepted in <a href="http://pactconf.org/program/pact-2016-accepted-papers/"  target="_blank">PACT 2016</a><br>
 									<!-- <img width=24 src="images/paper-icon.png" style="vertical-align:middle"> Submission Chair for <a href="http://ics16.bilkent.edu.tr"  target="_blank">ICS 2016</a><br></p> -->
 									<ul class="actions">
 										<li><a href="#one" class="button">Learn more</a></li>
@@ -330,15 +328,31 @@ Proceedings of the <a href="http://www.icccs.co.in/" target="_blank"> 2nd Intern
 	<div class="inner">
 		<h2>MISCELLANEOUS</h2>
 		<table class="imgtable"><tbody>
-			<col width="450">
-			<col width="375">
+			<col width="475">
+			<col width="350">
 			<tr>
-
+						<td>
+							<h2>SERVICE</h2>
+							<b>Submission Chair</b>, <a href="http://ics16.bilkent.edu.tr/committees.htm" target="_blank">ICS 2016, Turkey </a><br>
+							<b>Reviewer</b>: <br>
+							<li>IEEE Transactions on Parallel and Distributed Systems (TPDS)</li>
+							<li>IEEE Transactions on Cloud Computing (TCC) </li>
+							<li>Microprocessors and Microsystems, Elsevier </li>
+							On-behalf reviewer for:
+							<ul>
+								<li>2016 (HPCA, ISCA, MICRO, ICCD)</li>
+								<li>2015 (MICRO, ISCA, HPCA, IPDPS, PPoPP, IGSC)</li>
+								<li><p>2014 (MICRO, ICCAD)</p></li>
+							</ul>
+						</td>
 				<td>
 					<h2>AWARDS</h2>
 					<ul>
 						<li>Student Travel Grant:
-							<ul>
+							<ul><li>ISCA 2017
+								</li>
+								<li>HPCA 2017
+								</li>
 								<li>PACT 2016
 								</li>
 								<li>SIGMETRICS 2016
@@ -348,7 +362,11 @@ Proceedings of the <a href="http://www.icccs.co.in/" target="_blank"> 2nd Intern
 							</ul>
 						</td>
 
-						<td>
+
+						</tr>
+
+
+												<td>
 							<h2>MEMBERSHIPS</h2>
 							<ul>
 								<li><a href="http://www.ieee.org/" target="_blank">IEEE Student Member</a>
@@ -357,20 +375,6 @@ Proceedings of the <a href="http://www.icccs.co.in/" target="_blank"> 2nd Intern
 								</li>
 								<li><a href="http://www.sigarch.org/" target="_blank">ACM SIGARCH</a> </li>
 								<li><a href="http://www.sigmetrics.org/" target="_blank">ACM SIGMETRICS</a> 
-								</li>
-							</ul>
-						</tr>
-
-						<td>
-							<h2>SERVICE</h2>
-							Reviewer: Microprocessors and Microsystems, Elsevier <br>
-							On-behalf reviewer for:
-							<ul>
-								<li>2016 (HPCA, ISCA, MICRO, ICCD)
-								</li>
-								<li>2015 (MICRO, ISCA, HPCA, IPDPS, PPoPP, IGSC)
-								</li>
-								<li><p>2014 (MICRO, ICCAD)</p>
 								</li>
 							</ul>
 						</td>
