remove on-behalf reviewer

--- a/index.html
+++ b/index.html
@@ -338,12 +338,12 @@ Proceedings of the <a href="http://www.icccs.co.in/" target="_blank"> 2nd Intern
 							<li>IEEE Transactions on Parallel and Distributed Systems (TPDS)</li>
 							<li>IEEE Transactions on Cloud Computing (TCC) </li>
 							<li>Microprocessors and Microsystems, Elsevier </li>
-							On-behalf reviewer for:
+						<!--	On-behalf reviewer for:
 							<ul>
 								<li>2016 (HPCA, ISCA, MICRO, ICCD)</li>
 								<li>2015 (MICRO, ISCA, HPCA, IPDPS, PPoPP, IGSC)</li>
 								<li><p>2014 (MICRO, ICCAD)</p></li>
-							</ul>
+							</ul> -->
 						</td>
 				<td>
 					<h2>AWARDS</h2>
