update to services

--- a/index.html
+++ b/index.html
@@ -338,6 +338,7 @@ Proceedings of the <a href="http://www.icccs.co.in/" target="_blank"> 2nd Intern
 							<li>IEEE Transactions on Parallel and Distributed Systems (TPDS)</li>
 							<li>IEEE Transactions on Cloud Computing (TCC) </li>
 							<li>Microprocessors and Microsystems, Elsevier </li>
+							<li>ETRI Journal, Wiley </li>
 						<!--	On-behalf reviewer for:
 							<ul>
 								<li>2016 (HPCA, ISCA, MICRO, ICCD)</li>
