--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 							<div class="inner">
 								<p>
 									Ph.D. Candidate <br>
-									111N IST Building <br>
+									W340 Westgate Building <br>
 									<a href="http://www.cse.psu.edu/" target="_blank">Department of Computer Science and Engineering</a><br>
 									<a href="http://www.psu.edu/" target="_blank">Penn State University</a>, University Park, PA, 16802 <br>
 									<a href="mailto:ashutosh@cse.psu.edu" target="_blank"><img width=32 src="images/mail.ico" style="vertical-align:middle"> ashutosh@cse.psu.edu</a><br>
