--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 									<img width=24 src="images/paper-icon.png" style="vertical-align:middle"> Paper accepted in <a href="http://hpca2017.org/"  target="_blank">HPCA 2017</a><br>
 									<!-- <img width=24 src="images/paper-icon.png" style="vertical-align:middle"> Submission Chair for <a href="http://ics16.bilkent.edu.tr"  target="_blank">ICS 2016</a><br></p> -->
 									<ul class="actions">
-										<li><a href="#one" class="button">Learn more</a></li>
+										<li><a href="#one" class="button">About me</a></li>
 										<li><a href="ashutoshCV.pdf" target="_blank" class="button">CV</a></li>
 									</ul>
 								</div>
@@ -72,7 +72,7 @@
 
 
 			<!-- One -->
-			<section id="one" class="wrapper style2 spotlights">
+			<section id="one" class="wrapper style4 spotlights">
 				<section>
 					<a class="image"><img src="images/about.jpg" alt="" data-position="center center" /></a>
 					<div class="content">
@@ -120,7 +120,7 @@
 					</section>
 
 					<!-- Two -->
-					<section id="two" class="wrapper style2-alt fade-up">
+					<section id="two" class="wrapper style4 fade-up">
 						<div class="inner">
 							<h2>PUBLICATIONS</h2>
 							<div class="features">
@@ -206,7 +206,7 @@ Proceedings of the <a href="http://www.icccs.co.in/" target="_blank"> 2nd Intern
 </section>
 
 <!-- Three -->
-<section id="three" class="wrapper style2 fade-up">
+<section id="three" class="wrapper style4 fade-up">
 	<div class="inner">
 		<h2>WORK EXPERIENCE</h2>
 		<table>
@@ -298,7 +298,7 @@ Proceedings of the <a href="http://www.icccs.co.in/" target="_blank"> 2nd Intern
 
 
 <!-- Four -->
-<section id="four" class="wrapper style2-alt fade-up">
+<section id="four" class="wrapper style4 fade-up">
 	<div class="inner">
 		<h2>ACADEMIC BACKGROUND</h2>
 		<table>
@@ -310,7 +310,7 @@ Proceedings of the <a href="http://www.icccs.co.in/" target="_blank"> 2nd Intern
 			</td>
 		</tr>
 		<tr><td style="vertical-align:top;">
-			<a class="image"><img src="images/nitrkl.png" alt="" data-position="center center"  width="120px" height="120px"/></a>
+			<a class="image"><img src="images/nitrkl.gif" alt="" data-position="center center"  width="120px" height="120px"/></a>
 		</td>
 		<td>
 			<p><b>B. Tech. in <a href="http://nitrkl.ac.in/Academic/1Department/Home.aspx?hrtuery765hd=OA==-GS5YNjRcEt0=" target="_blank">Electronics and Instrumentation Engineering</a></b><br><a href="http://www.nitrkl.ac.in/" target="_blank">National Institute of Technology (NIT), Rourkela</a> <br>
@@ -324,7 +324,7 @@ Proceedings of the <a href="http://www.icccs.co.in/" target="_blank"> 2nd Intern
 </section>
 
 <!-- Five -->
-<section id="five" class="wrapper style2 fade-up">
+<section id="five" class="wrapper style4 fade-up">
 	<div class="inner">
 		<h2>MISCELLANEOUS</h2>
 		<table class="imgtable"><tbody>
@@ -457,7 +457,7 @@ Proceedings of the <a href="http://www.icccs.co.in/" target="_blank"> 2nd Intern
 </div> -->
 
 <!-- Footer -->
-<footer id="footer" class="wrapper style1-alt">
+<footer id="footer" class="wrapper style4">
 	<div class="inner">
 		<ul class="menu">
 			<li>All logos are registered trademarks of their respective owners.</li><li>Design:<a href="http://html5up.net">HTML5 UP</a></li>
