--- a/publications.html
+++ b/publications.html
@@ -24,7 +24,7 @@
 <link rel="stylesheet" type="text/css" href="./assets1/css">
 <script type="text/javascript">SQUARESPACE_ROLLUPS = {};</script>
 <script>(function(rollups, name) { if (!rollups[name]) { rollups[name] = {}; } rollups[name].js = ["//static.squarespace.com/universal/scripts-compressed/common-ab96aba6c1b4bf7ac6ef-min.en-US.js"]; })(SQUARESPACE_ROLLUPS, 'squarespace-common');</script>
-
+<script crossorigin="anonymous" src="./assets1/common-ab96aba6c1b4bf7ac6ef-min.en-US.js.download"></script><script crossorigin="anonymous" src="./assets1/performance-1e9472e42012af61393e-min.en-US.js.download" defer=""></script>
 <!--[if !IE]> --><link rel="stylesheet" type="text/css" href="./assets1/site.css"><!-- <![endif]-->
 <style type="text/css">
   body, p, nav li, li {
