--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@ line-height: 1.7em;
       <div class="wrapper">
         <nav class="main-nav mobileNav"><ul>
         <li class="page-collection active-link">
-              <a href="index1.html">Home</a>
+              <a href="index.html">Home</a>
         </li>
         <li class="page-collection">
               <a href="publications.html">Publications</a>
@@ -133,7 +133,7 @@ line-height: 1.7em;
   <nav class="main-nav" data-content-field="navigation">
     <ul>
           <li class="page-collection active-link">
-                <a href="index1.html">Home</a>
+                <a href="index.html">Home</a>
           </li>
 		  <li class="page-collection">
                 <a href="publications.html">Publications</a>
