stat counter fixed

--- a/index.html
+++ b/index.html
@@ -218,4 +218,21 @@ W340 Westgate Building <br>
 
     </section>
 
+    <script type="text/javascript">
+  var sc_project=10245763; 
+  var sc_invisible=1; 
+  var sc_security="6de2261b"; 
+  var scJsHost = (("https:" == document.location.protocol) ?
+    "https://secure." : "http://www.");
+  document.write("<sc"+"ript type='text/javascript' src='" +
+    scJsHost+
+    "statcounter.com/counter/counter.js'></"+"script>");
+  </script>
+  <noscript><div class="statcounter"><a title="free hit
+    counter" href="http://statcounter.com/free-hit-counter/"
+    target="_blank"><img class="statcounter"
+    src="http://c.statcounter.com/10245763/0/6de2261b/1/"
+    alt="free hit counter"></a></div></noscript>
+    <!-- End of StatCounter Code for Default Guide -->
+
 </body></html>
