--- a/activities.html
+++ b/activities.html
@@ -79,8 +79,23 @@ line-height: 1.7em;
 
       </div>
     </div>
-    <div id="mobileMenuLink"><a>Menu</a></div>
+  <div id="mobileMenuLink">
+    <!-- <a>Menu</a> -->
+    <a href="javascript:void(0);" class="icon" onclick="myFunction()">Menu</a>
+    <i class="fa fa-bars"></i>
+  </div>
 
+<script>
+function myFunction() {
+    var x = document.getElementById("mobileMenuLink");
+    var y = document.getElementById("mobileNav");
+    if (y.className === "") {
+        y.className += "menu-open";
+    } else {
+        y.className = "";
+    }
+}
+</script>
     <header id="header" class="clear">
 
     
