--- a/activities.html
+++ b/activities.html
@@ -4,7 +4,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   
   <meta name="viewport" content="initial-scale=1">
-  
+  <link href="https://fonts.googleapis.com/css?family=Varela+Round" rel="stylesheet">
+
   <!-- This is Squarespace. --><!-- ashutosh-pattnaik -->
 <!--<base href="">--><base href=".">
 
